build: tinyExpression-jdk17 (Java 17 build of the same sources), unlaxer 3.1.1 (#220)
tinyExpression 本体は従来どおり Java 21 (major 65)。同じソースを release 17 で再コンパイルした
org.unlaxer:tinyExpression-jdk17 (major 61、unlaxer-*-jdk17 のみに依存) を追加する。

- tinyexpression-jdk17/pom.xml: ../src を参照する単独 POM（ルートは jar packaging で集約不可）。
  P4 runtime は CodegenMain --java-release 17 で生成。JDK 17 上でテストを自動実行、sources/javadoc 付き
- ソースを --release 17 で通る形に: P4StrictMatchTypingValidator の pattern switch → instanceof
  （null の NPE は維持）、UbnfcAstConverter（生成スクリプトごと）、McpServer の virtual thread は
  Java 21+ では従来どおり・17 では cached pool。テストの getFirst / ExecutorService#close
- vendored ubnfc parser を ubnfc 15c4cbb（D-081: 生成 Java を --release 17 で通す）で再生成
- unlaxer.version 3.1.1。未 publish の間 CI は pin した unlaxer-parser commit から install
- CI: JDK 17 で tinyExpression-jdk17 の全テスト + major 61 + release-21 unlaxer 非依存を検査、
  本体 jar は major 65 を検査。Mapper compatibility (published) は Central にある版で検査
- release-central.sh / release-central.yml が tinyExpression-jdk17 も deploy
- CHANGELOG [2.0.1] / README に「Java 17 は tinyExpression-jdk17」

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>