@@ -163,7 +163,7 @@ public final class Session {
                 if (items[i].isCharacters) members.add(L_SPACE);
                 else if (items[i].isLineComment) members.add(items[i].openLabel);
                 else { members.add(items[i].openLabel); members.add(items[i].closeLabel); }
-                prefixGroups[i] = members.size() == 1 ? members.getFirst() : Label.group(members.toArray(new Label[0]));
+                prefixGroups[i] = members.size() == 1 ? members.get(0) : Label.group(members.toArray(new Label[0]));
             }
         }
         /** 全ての区切りが失敗した周回が登録する 1 件（候補除外の再生が使う）。 */
@@ -531,7 +531,7 @@ public final class Session {
                         } else if (nodeLike && list && !v.nodes().isEmpty()) {
                             List<Recipe> children = v.nodes();
                             if (captures == null && children.size() == 1 && single == null) {
-                                Recipe node = children.getFirst(); single = new Value(node.start(), node.end(), children);
+                                Recipe node = children.get(0); single = new Value(node.start(), node.end(), children);
                                 continue;
                             }
                             if (captures == null) { captures = new ArrayList<>(children.size() + 1); if (single != null) { captures.add(single); single = null; } }
@@ -558,7 +558,7 @@ public final class Session {
             else {
                 List<Value> values = result.values();
                 if (skipped || nodes != result.nodes()) {
-                    values = nodes.isEmpty() ? List.of() : List.of(new Value(nodes.getFirst().start(), nodes.getFirst().end(), nodes));
+                    values = nodes.isEmpty() ? List.of() : List.of(new Value(nodes.get(0).start(), nodes.get(0).end(), nodes));
                 }
                 result = new Match(nodes, List.of(), result.captures(), result.traces(), c, f.c,
                     result.mappingFailure(), result.recoveries(), List.of(), result.text(), values);
@@ -665,7 +665,7 @@ public final class Session {
             var items = new ArrayList<Match>();
             for (Match item : result.items()) {
                 Match selected = item;
-                if (selected.items().size() == 1) selected = selected.items().getFirst();
+                if (selected.items().size() == 1) selected = selected.items().get(0);
                 String text = selected.text() == null ? source.substring(selected.start(), selected.end()).strip() : selected.text();
                 var value = new Match(item.nodes(), item.local(), item.captures(), item.traces(), item.start(), item.end(),
                     item.mappingFailure(), item.recoveries(), item.items(), text, item.values());
@@ -765,7 +765,7 @@ public final class Session {
                 : new Match(List.of(), join(items, LOCAL, localN), List.of(), List.of(), start, end);
         }
         if (items.size() == 1) {
-            Match only = items.getFirst();
+            Match only = items.get(0);
             return new Match(only.nodes(), only.local(), only.captures(), only.traces(), start, end, only.mappingFailure(), only.recoveries(), items, only.text(), only.values());
         }
         // 1 回目の走査で各列の合計要素数だけを数え、2 回目で合計長の list を 1 個だけ確保する。
@@ -1460,7 +1460,7 @@ public final class Session {
     }
     public Recipe node(Value value, Recipe owner) {
         if (value.nodes().size() > 1) throw mapping(value.start(), value.end(), "Scalar capture has multiple mapped nodes", null);
-        if (!value.nodes().isEmpty()) return value.nodes().getFirst();
+        if (!value.nodes().isEmpty()) return value.nodes().get(0);
         if (owner.fallback() != null) return new Recipe("#leaf:" + owner.fallback(), value.start(), value.end(), Map.of(), null);
         throw mapping(value.start(), value.end(), "Missing mapped node", null);
     }
@@ -1468,13 +1468,13 @@ public final class Session {
     public <T> T scalar(Recipe recipe, int index, String field, Function<Value, T> conversion) {
         List<Value> values = recipe.fieldValues(index);
         if (values.isEmpty()) throw mapping(recipe.start(), recipe.end(), "Missing scalar capture: " + field, null);
-        T value = conversion.apply(values.getFirst());
-        if (value == null && !values.getFirst().nodes().isEmpty()) throw new RecoveredNodeMissing();
+        T value = conversion.apply(values.get(0));
+        if (value == null && !values.get(0).nodes().isEmpty()) throw new RecoveredNodeMissing();
         return value;
     }
     public <T> Optional<T> optional(Recipe recipe, int index, String field, Function<Value, T> conversion) {
         List<Value> values = recipe.fieldValues(index);
-        return values.isEmpty() ? Optional.empty() : Optional.ofNullable(conversion.apply(values.getFirst()));
+        return values.isEmpty() ? Optional.empty() : Optional.ofNullable(conversion.apply(values.get(0)));
     }
     public <T> List<T> list(Recipe recipe, int index, String field, Function<Value, T> conversion) {
         List<Value> values = recipe.fieldValues(index);
